changed image paths

--- a/ES2-FrontEnd/index.html
+++ b/ES2-FrontEnd/index.html
@@ -61,15 +61,15 @@
 
     		    <div class="row">
     				    <div id="Earth" title="Earth" class="col-md-2">
-    				        <a href="#"><img src="/images/Dot.png"/></a>
+    				        <a href="#"><img src="images/Dot.png"/></a>
                 </div>
 
                 <div id="Moon" title="Moon" class="col-md-2">
-                    <a href="#"><img src="/images/Dot.png"/></a>
+                    <a href="#"><img src="images/Dot.png"/></a>
                 </div>
 
                 <div id="Mars" title="Mars" class="col-md-2">
-                    <a href="#"><img src="/images/mars70.png"/></a>
+                    <a href="#"><img src="images/mars70.png"/></a>
                 </div>
             </div>
 
