--- a/ES2-FrontEnd/index.html
+++ b/ES2-FrontEnd/index.html
@@ -7,6 +7,9 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
+        <!--D3 library for chart implementation-->
+        <script src="//d3js.org/d3.v3.min.js"></script>
+
         <!--jQuery-->
         <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
 
