--- a/ES2-FrontEnd/index.html
+++ b/ES2-FrontEnd/index.html
@@ -258,7 +258,7 @@
 
          <!--right toggle button-->
         <div id="right-layer-menu-toggle">
-            <img src="images/menu.png" width=20 height=20 alt="Menu" ></img>
+            <img src="images/close.png" width=20 height=20 alt="Menu" ></img>
         </div>
 
         <!--right toggle menu-->
