--- a/html/index.html
+++ b/html/index.html
@@ -69,7 +69,7 @@
                 </div>
 		
                 <div id="Moon" title="Moon" class="col-md-2">
-                    <a href="#"><img src="images/logo_moon.png"/></a>
+                    <a href="#"><img src="images/moon_logo.png"/></a>
                 </div>
 
                 <div id="Mars" title="Mars" class="col-md-2">
