--- a/html/service-template.html
+++ b/html/service-template.html
@@ -15,19 +15,18 @@
             crossorigin="anonymous"></script>
     <link rel="stylesheet" href="service-template.css"/>
 
-    <script src="libs/JQueryLinedText/jquery-linedtextarea.js"></script>
-    <link href="libs/JQueryLinedText/jquery-linedtextarea.css" type="text/css" rel="stylesheet" />
+   <script src="libs/jquery.mousewheel.js"></script>
 
-    <link rel="stylesheet" href="libs/malihu-custom-scrollbar-plugin/jquery.mCustomScrollbar.css" />
-    <script src="libs/malihu-custom-scrollbar-plugin/jquery.mCustomScrollbar.concat.min.js"></script>
+    <link rel="stylesheet" href="libs/malihu-custom-scrollbar-plugin/jquery.mCustomScrollbar.min.css" />
+    <script src="libs/malihu-custom-scrollbar-plugin/jquery.mCustomScrollbar.js"></script>
 
-    <script data-main="landing"
+   <script data-main="landing"
             src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.1.17/require.min.js"></script>
+
+    <!--<script src="service-template.js"></script>-->
 
     <script src="service.js"></script>
     <script src="selection-names.js"></script>
-    <!--<script src="service-template.js"></script>-->
-
     <script src="dock-bar.js"></script>
     <script src="main-dock.js"></script>
     <script src="secondary-dock.js"></script>
@@ -39,7 +38,7 @@
     <script src="code-area.js"></script>
     <script src="gis-toolbar.js"></script>
     <script src="coordinate-overlay.js"></script>
-    <script src="www/landing.js"></script>
+    // <!-- <script src="www/landing.js"></script> -->
 </head>
 <body>
 <nav id="service-navbar" class="navbar navbar-default navbar-fixed-top">
@@ -61,7 +60,7 @@
 </div>
 <script type="application/javascript">
     $(function () {
-        $("#service-container").service({});
+        $("#service-container").service();
     });
 </script>
 </body>
