--- a/html/service-template.html
+++ b/html/service-template.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Service Name</title>
+    <title>PlanetServer-2</title>
 
 
     <script src="https://code.jquery.com/jquery-2.2.1.min.js"></script>
@@ -38,14 +38,14 @@
     <script src="code-area.js"></script>
     <script src="gis-toolbar.js"></script>
     <script src="coordinate-overlay.js"></script>
-    // <!-- <script src="www/landing.js"></script> -->
+
 </head>
 <body>
 <nav id="service-navbar" class="navbar navbar-default navbar-fixed-top">
     <div class="container-fluid">
         <div class="navbar-header">
             <a class="navbar-brand" href="#">
-                <img alt="Service logo" src="images/logos/service_logo_dummy.jpg" class="img-responsive">
+                <img alt="Service logo" src="images/planet_server_logo.png" class="img-responsive">
             </a>
         </div>
         <div>
