--- a/html/service-template.html
+++ b/html/service-template.html
@@ -38,6 +38,7 @@
     <script src="code-area.js"></script>
     <script src="gis-toolbar.js"></script>
     <script src="coordinate-overlay.js"></script>
+    <script src="plot-dock.js"></script>
 
 </head>
 <body>
