Rought graph implementation

--- a/html/service-template.html
+++ b/html/service-template.html
@@ -6,6 +6,12 @@
   <title>PlanetServer-2</title>
 
 
+   <!--D3 library for chart implementation-->
+  <script type="text/javascript" src="../thirdparty/d3.v3.min.js"></script>
+
+  <!--C3 library for easier chart implementation-->
+  <script type="text/javascript" src="../thirdparty/c3/c3.js"></script>
+
   <script src="https://code.jquery.com/jquery-2.2.1.min.js"></script>
   <script src="https://code.jquery.com/ui/1.11.4/jquery-ui.min.js"></script>
   <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet"
