--- a/html/service-template.html
+++ b/html/service-template.html
@@ -21,6 +21,7 @@
   integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS"
   crossorigin="anonymous"></script>
   <link rel="stylesheet" href="service-template.css"/>
+  <link rel="stylesheet" href="graph.css"/>
 
   <!--<script src="libs/jquery.mousewheel.js"></script>-->
 
