--- a/html/service-template.html
+++ b/html/service-template.html
@@ -67,6 +67,36 @@
   <div id="service-container">
     <canvas id="canvasOne"></canvas>
   </div>
+
+  <div id="checkedFootPrintsDiv" style="position:absolute; top: 123px; width:450px; background-color: white; height:380px; overflow: scroll;">
+   <h2> Checked table </h2>
+   <table class="table table-bordered">
+    <thead>
+      <tr>
+        <th>No</th>
+        <th>CoverageID</th>
+        <th>Checked</th>
+	<th>View</th>
+      </tr>
+    </thead>
+    <tbody id="checkedFootPrintsTable">
+      <!--
+        it is changed when user click footprint in getFootPrintsContainingPoint (Footprints.js)
+       <tr>
+        <td>1</td>
+        <td>HRL00004839_07_IF182L_TRR3</td>
+        <td>	   
+		<input type="checkbox" id="checkedFootPrintsTable_checked_1" value="HRL00004839_07_IF182L_TRR3" onclick="removeCheckedFootPrintRow(this);" checked>	   
+        </td>
+	<td>	   
+		<button type="button" class="btn btn-info" id="checkedFootPrintsTable_view_1" data-content="10_39" onclick="viewCheckedFootPrintRow(this);">
+		      <span class="glyphicon glyphicon-search"></span> View
+		</button>
+        </td>
+      </tr> -->
+    </tbody>
+  </table>
+  </div>
   <script type="application/javascript">
   $(function () {
     $("#service-container").service();
