checked panel add

--- a/html/service-template.html
+++ b/html/service-template.html
@@ -47,6 +47,7 @@
   <script src="gis-toolbar.js"></script>
   <script src="coordinate-overlay.js"></script>
   <script src="plot-dock.js"></script>
+  <script src="checked-coverages-panel.js"></script>
 
 </head>
 <body>
@@ -68,7 +69,7 @@
     <canvas id="canvasOne"></canvas>
   </div>
 
-  <div id="checkedFootPrintsDiv" style="position:absolute; top: 123px; width:450px; background-color: white; height:380px; overflow: scroll;">
+  <!-- <div id="checkedFootPrintsDiv" style="position:absolute; top: 123px; width:450px; background-color: white; height:380px; overflow: scroll;">
    <h2> Checked table </h2>
    <table class="table table-bordered">
     <thead>
@@ -82,7 +83,7 @@
     <tbody id="checkedFootPrintsTable">
     </tbody>
   </table>
-  </div>
+  </div> -->
   <script type="application/javascript">
   $(function () {
     $("#service-container").service();
