--- a/html/service-template.html
+++ b/html/service-template.html
@@ -1,88 +1,73 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>PlanetServer-2</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>PlanetServer-2</title>
 
-  <!--D3 library for chart implementation-->
-  <script type="text/javascript" src="../thirdparty/d3.v3.min.js"></script>
 
-  <script src="https://code.jquery.com/jquery-2.2.1.min.js"></script>
-  <script src="https://code.jquery.com/ui/1.11.4/jquery-ui.min.js"></script>
-  <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet"
-  integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"
-  integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS"
-  crossorigin="anonymous"></script>
-  <link rel="stylesheet" href="service-template.css"/>
-  <link rel="stylesheet" href="graph.css"/>
+    <!--D3 library for chart implementation-->
+    <script type="text/javascript" src="../thirdparty/d3.v3.min.js"></script>
 
-  <!--<script src="libs/jquery.mousewheel.js"></script>-->
+    <script src="https://code.jquery.com/jquery-2.2.1.min.js"></script>
+    <script src="https://code.jquery.com/ui/1.11.4/jquery-ui.min.js"></script>
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"
+            integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS"
+            crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="service-template.css"/>
+    <link rel="stylesheet" href="graph.css"/>
 
-  <link rel="stylesheet" href="libs/malihu-custom-scrollbar-plugin/jquery.mCustomScrollbar.min.css" />
-  <script src="libs/malihu-custom-scrollbar-plugin/jquery.mCustomScrollbar.concat.min.js"></script>
+    <script src="libs/malihu-custom-scrollbar-plugin/jquery.mousewheel.js"></script>
 
-  <script data-main="landing"
-  src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.1.17/require.min.js"></script>
+    <link rel="stylesheet" href="libs/malihu-custom-scrollbar-plugin/jquery.mCustomScrollbar.css"/>
+    <script src="libs/malihu-custom-scrollbar-plugin/jquery.mCustomScrollbar.js"></script>
 
-  <!--<script src="service-template.js"></script>-->
 
-  <script src="service.js"></script>
-  <script src="selection-names.js"></script>
-  <script src="dock-bar.js"></script>
-  <script src="main-dock.js"></script>
-  <script src="secondary-dock.js"></script>
-  <script src="info-dock.js"></script>
-  <script src="dock-panel.js"></script>
-  <script src="tab-panel.js"></script>
-  <script src="select-panel.js"></script>
-  <script src="query-terminal-panel.js"></script>
-  <script src="code-area.js"></script>
-  <script src="gis-toolbar.js"></script>
-  <script src="coordinate-overlay.js"></script>
-  <script src="plot-dock.js"></script>
-  <script src="checked-coverages-panel.js"></script>
+    <script src="libs/codemirror/codemirror.js"></script>
+    <link rel="stylesheet" href="libs/codemirror/codemirror.css"/>
+    <!--<script src="libs/codemirror/codemirror-compressed.js"></script>-->
+    <!--<link rel="stylesheet" href="libs/codemirror/simplescrollbars.css"/>-->
 
+    <script src="libs/codemirror/scroll/simplescrollbars.js"></script>
+    <link rel="stylesheet" href="libs/codemirror/scroll/simplescrollbars.css"/>
+    <script src="libs/codemirror/display/placeholder.js"></script>
+    <script src="libs/codemirror/selection/active-line.js"></script>
+
+    <script data-main="landing"
+      src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.1.17/require.min.js"></script>
+    <!--<script data-main="www/landing"
+            src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.1.17/require.min.js"></script>-->
+
+    <script src="service.js"></script>
+    <script src="selection-names.js"></script>
+    <script src="navbar.js"></script>
+    <script src="dock-bar.js"></script>
+    <script src="main-dock.js"></script>
+    <script src="secondary-dock.js"></script>
+    <script src="info-dock.js"></script>
+    <script src="plot-dock.js"></script>
+    <script src="dock-panel.js"></script>
+    <script src="tab-panel.js"></script>
+    <script src="select-panel.js"></script>
+    <script src="query-terminal-panel.js"></script>
+    <script src="code-area.js"></script>
+    <script src="gis-toolbar.js"></script>
+    <script src="coordinate-overlay.js"></script>
+    <script src="code-area.js"></script>
+    <script src="checked-coverages-panel.js"></script>
+    <!--<script src="www/landing.js"></script>-->
 </head>
 <body>
-  <nav id="service-navbar" class="navbar navbar-default navbar-fixed-top">
-    <div class="container-fluid">
-      <div class="navbar-header">
-        <a class="navbar-brand" href="#">
-          <img alt="Service logo" src="images/planet_server_logo.png" class="img-responsive">
-        </a>
-      </div>
-      <div>
-        <a class="navbar-brand navbar-right" href="http://www.earthserver.eu">
-          <img src="images/logos/earthserver_logo.png">
-        </a>
-      </div>
+    <nav id="service-navbar"></nav>
+    <div id="service-container">
+        <canvas id="canvasOne"></canvas>
     </div>
-  </nav>
-  <div id="service-container">
-    <canvas id="canvasOne"></canvas>
-  </div>
-
-  <!-- <div id="checkedFootPrintsDiv" style="position:absolute; top: 123px; width:450px; background-color: white; height:380px; overflow: scroll;">
-   <h2> Checked table </h2>
-   <table class="table table-bordered">
-    <thead>
-      <tr>
-        <th>No</th>
-        <th>CoverageID</th>
-        <th>Checked</th>
-	<th>View</th>
-      </tr>
-    </thead>
-    <tbody id="checkedFootPrintsTable">
-    </tbody>
-  </table>
-  </div> -->
-  <script type="application/javascript">
-  $(function () {
-    $("#service-container").service();
-  });
-  </script>
+<script type="application/javascript">
+    $(function () {
+        $("#service-container").service();
+    });
+</script>
 </body>
 </html>
