create the tour

--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>PlanetServer-2</title>
 
-
+    <!--intro.js library  -->
+    <link rel="stylesheet" href="html/js/introjs.css"/>
+    <script type="text/javascript" src="html/js/intro.js"></script>
     <!--D3 library for chart implementation-->
     <script type="text/javascript" src="thirdparty/d3.v3.min.js"></script>
 
@@ -23,6 +25,8 @@
 
     <link rel="stylesheet" href="html/libs/malihu-custom-scrollbar-plugin/jquery.mCustomScrollbar.css"/>
     <script src="html/libs/malihu-custom-scrollbar-plugin/jquery.mCustomScrollbar.js"></script>
+    <script src="html/js/angular.min.js"></script>
+
 
 
     <script src="html/libs/codemirror/codemirror.js"></script>
@@ -57,7 +61,8 @@
     <script src="html/coordinate-overlay.js"></script>
     <script src="html/code-area.js"></script>
     <script src="html/checked-coverages-panel.js"></script>
-    <!--<script src="www/landing.js"></script>-->
+    <!-- // <script src="html/tour.js"></script> -->
+    <!-- // <script src="html/landing.js"></script> -->
 </head>
 <body>
     <nav id="service-navbar"></nav>
