rgb combinator test

--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <script type="text/javascript" src="html/js/intro.js"></script>
     <!--D3 library for chart implementation-->
     <script type="text/javascript" src="thirdparty/d3.v3.min.js"></script>
+    <script src="html/js/jquery/jquery-2.2.1.min.js"></script>
+  <script src="html/js/jquery/jquery-ui.min.js"></script>
 
     <script src="http://code.jquery.com/jquery-2.2.1.min.js"></script>
     <script src="http://code.jquery.com/ui/1.11.4/jquery-ui.min.js"></script>
@@ -61,8 +63,14 @@
     <script src="html/coordinate-overlay.js"></script>
     <script src="html/code-area.js"></script>
     <script src="html/checked-coverages-panel.js"></script>
+    <script src="html/rgb-combinator-panel.js"></script>
+    <script src="html/js/rgb_combination/rgb_combination.js"></script>
     <!-- // <script src="html/tour.js"></script> -->
     <!-- // <script src="html/landing.js"></script> -->
+
+
+
+
 </head>
 <body>
     <nav id="service-navbar"></nav>
