--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!--D3 library for chart implementation-->
     <script type="text/javascript" src="thirdparty/d3.v3.min.js"></script>
     <script src="html/js/jquery/jquery-2.2.1.min.js"></script>
-  <script src="html/js/jquery/jquery-ui.min.js"></script>
+    <script src="html/js/jquery/jquery-ui.min.js"></script>
 
     <script src="http://code.jquery.com/jquery-2.2.1.min.js"></script>
     <script src="http://code.jquery.com/ui/1.11.4/jquery-ui.min.js"></script>
@@ -22,6 +22,7 @@
             crossorigin="anonymous"></script>
     <link rel="stylesheet" href="html/service-template.css"/>
     <link rel="stylesheet" href="html/graph.css"/>
+    <link rel="stylesheet" href="html/combinator.css"/>
 
     <script src="html/libs/malihu-custom-scrollbar-plugin/jquery.mousewheel.js"></script>
 
@@ -64,10 +65,27 @@
     <script src="html/code-area.js"></script>
     <script src="html/checked-coverages-panel.js"></script>
     <script src="html/rgb-combinator-panel.js"></script>
-    <script src="html/js/rgb_combination/rgb_combination.js"></script>
+    <!-- // <script src="html/rgb_combination.js"></script> -->
     <!-- // <script src="html/tour.js"></script> -->
     <!-- // <script src="html/landing.js"></script> -->
-
+    <!-- // <script>
+    //
+    //          // this function is loaded in rgb_combinations.js for RGB Bands
+    //       	loadDropDownRGBBands = "";
+    //
+    //          // this function is loaded in rgb_combinations.js for WCPS Bands
+    //          loadDropDownWCPSBands = "";
+    //
+    //       	$(document).ready(function() {
+    //
+    //       		// load rgb bands to rgbDropDown from rgb_combination.js
+    //       		loadDropDownRGBBands();
+    //
+    //             // load WCPS custom query to wcpsDropDown from rgb_combinations.js
+    //             loadDropDownWCPSBands();
+    //   	    });
+    //
+    //       </script> -->
 
 
 
