Fix problem with remove loaded-images on footprint, autosuggestion with dropdownbox and size of menu in RGB bands combination

--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
     <script src="html/libs/malihu-custom-scrollbar-plugin/jquery.mCustomScrollbar.js"></script>
     <script src="html/js/angular.min.js"></script>
 
-
+   <!-- auto complete dropdown -->
+   <link rel="stylesheet" href="//code.jquery.com/ui/1.11.4/themes/smoothness/jquery-ui.css">
 
     <script src="html/libs/codemirror/codemirror.js"></script>
     <link rel="stylesheet" href="html/libs/codemirror/codemirror.css"/>
