--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <script type="text/javascript" src="html/js/intro.js"></script>
     <!--D3 library for chart implementation-->
     <script type="text/javascript" src="thirdparty/d3.v3.min.js"></script>
-    <script src="html/js/jquery/jquery-2.2.1.min.js"></script>
-    <script src="html/js/jquery/jquery-ui.min.js"></script>
+    <!-- // <script src="html/js/jquery/jquery-2.2.1.min.js"></script>
+    // <script src="html/js/jquery/jquery-ui.min.js"></script> -->
 
     <script src="http://code.jquery.com/jquery-2.2.1.min.js"></script>
     <script src="http://code.jquery.com/ui/1.11.4/jquery-ui.min.js"></script>
