--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
     <!-- auto complete dropdown -->
     <link rel="stylesheet" href="//code.jquery.com/ui/1.11.4/themes/smoothness/jquery-ui.css">
 
+    <!-- amchart -->
+    <link href="https://www.amcharts.com/lib/3/plugins/export/export.css" rel="stylesheet" type="text/css">
+
     <!-- CSS 3rd - local libraries -->
     <link rel="stylesheet" href="html/libs/malihu-custom-scrollbar-plugin/jquery.mCustomScrollbar.css" />
     <link rel="stylesheet" href="html/libs/codemirror/codemirror.css" />
@@ -27,6 +30,14 @@
     <!-- Javascript libraries online -->
     <script src="html/js/jquery/jquery-2.2.3.min.js"></script>
     <script src="html/js/jquery/jquery-ui.min.js"></script>
+
+    <!-- Javascript amcharts -->
+    <script src="https://www.amcharts.com/lib/3/amcharts.js"></script>
+    <script src="https://www.amcharts.com/lib/3/serial.js"></script>
+    <script src="https://www.amcharts.com/lib/3/themes/light.js"></script>
+    <script src="https://www.amcharts.com/lib/3/plugins/export/export.js" type="text/javascript"></script>
+
+
     <!-- Javascript bootstrap library -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
 
@@ -86,7 +97,7 @@
 
     <script type="application/javascript">
         $(function() {
-            $("#service-container").service();
+            $("#service-container").service();	    
         });
     </script>
 
