--- a/index.html
+++ b/index.html
@@ -81,6 +81,7 @@
     <script src="html/template/panels/query-terminal-panel.js"></script>
     <script src="html/template/panels/code-area-panel.js"></script>
     <script src="html/template/panels/rgb-combinator-panel.js"></script>
+    <script src="html/template/panels/goto-panel.js"></script>
 
     <!-- Javascript main template -->
     <script src="html/template/service.js"></script>
@@ -98,7 +99,7 @@
     </ul>
 
    <!-- goto panel -->
-   <div id="gotoPanel" style="position: absolute; top: 425px; float: right;left: 65%; background-color: rgba(47, 85, 151, .2);">
+   <!-- <div id="gotoPanel" style="position: absolute; top: 425px; float: right;left: 65%; background-color: rgba(47, 85, 151, .2);">
      <table style="border-spacing: 10px; border-collapse: separate; width: 550px; color: white;">
        <tr> <td colspan="3" style="font-size:10px;"> Please choose Region or Coverage Name or (Latitude and Longitude) to navigate on globe.</td> </tr>
        <tr> <td style="width: 30%;">1. Region Search: </td> <td colspan="2"> <input type="text" id="txtRegionGoTo" class="autocompleteRegionGoTo" style="width:81%; color:blue; font-size:12px;"/> <button id="btnRegionGoTo" type="button" class="btn btn-success" style="height: 20px; font-size: 10px;">Goto</button> </td> </tr>
@@ -106,18 +107,18 @@
        <tr> <td>2. Coverage Name: </td> <td colspan="2"> <input type="text" id="txtCoverageIDGoTo" class="autocompleteCoverageIDGoTo" style="width:81%; color:blue; font-size:12px;"/> <button id="btnCoverageIDGoTo" type="button" class="btn btn-warning" style="height: 20px; font-size: 10px;">Goto</button> </td> </tr>
 
        <tr> <td>3. Latitude: </td> <td colspan="2"> <input type="text" id="txtLatitudeGoTo" style="width:25%; color:blue; font-size:12px;"/>
-            &nbsp; Longitude: &nbsp; 
-                <input type="text" id="txtLongitudeGoTo" style="width:28%; color:blue; font-size:12px;"/> 
+            &nbsp; Longitude: &nbsp;
+                <input type="text" id="txtLongitudeGoTo" style="width:28%; color:blue; font-size:12px;"/>
             <button id="btnLatLonGoTo" type="button" class="btn btn-danger" style="height: 20px; font-size: 10px;">Goto</button>
             </td> </tr>
-       <tr> <td colspan="3"> <a href="#" id="linkGoTo" style="color:yellow; font-size:9px;"></a></tr>           
+       <tr> <td colspan="3"> <a href="#" id="linkGoTo" style="color:yellow; font-size:9px;"></a></tr>
      </table>
-   </div>
+   </div> -->
 
 
     <script type="application/javascript">
         $(function() {
-            $("#service-container").service();	    
+            $("#service-container").service();
         });
     </script>
 
