--- a/index.html
+++ b/index.html
@@ -91,6 +91,22 @@
 <body>
     <nav id="service-navbar"></nav>
     <div id="service-container">
+	<div style='width: 35%; float: right; position: fixed; margin-left: 62%; margin-top: 80px; color:white;'>
+		<div>
+			Set WCPS query to selected radio button then click on loaded footprint for calculating band-ratio.<br/>
+			<div class="radio">
+			      <label><input type="radio" name="optradio" checked id="bandRatioNumerator">Numerator</label>
+			</div>
+		        
+			<div class="radio">
+			      <label><input type="radio" name="optradio" id="bandRatioDenominator">Denominator</label>
+			</div>
+			 <span class="label label-warning" id="bandRatioNotification"></span>
+
+		</div>
+		<div class='chartdiv' id='bandRatioChartDiv' style='width:100%; height:560px; margin-top:5px;'></div>
+	</div>
+	
         <canvas id="canvasOne"></canvas>
     </div>
 
@@ -114,6 +130,9 @@
        <tr> <td colspan="3"> <a href="#" id="linkGoTo" style="color:yellow; font-size:9px;"></a></tr>
      </table>
    </div> -->
+
+
+   <!-- band ratio -->
 
 
     <script type="application/javascript">
