--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
     <script src="html/template/docks/plot-dock.js"></script>
     <script src="html/template/docks/gis-toolbar.js"></script>
     <script src="html/template/docks/coordinate-overlay.js"></script>
-
+    <script src="html/template/docks/ratio-dock.js"></script>
     <!-- Javascript panels (modules) -->
     <script src="html/template/panels/dock-panel.js"></script>
     <script src="html/template/panels/tab-panel.js"></script>
@@ -82,6 +82,7 @@
     <script src="html/template/panels/code-area-panel.js"></script>
     <script src="html/template/panels/rgb-combinator-panel.js"></script>
     <script src="html/template/panels/goto-panel.js"></script>
+
 
     <!-- Javascript main template -->
     <script src="html/template/service.js"></script>
@@ -97,24 +98,6 @@
     <!-- menu context on right click -->
     <ul id="menuContext">
     </ul>
-
-   <!-- goto panel -->
-   <!-- <div id="gotoPanel" style="position: absolute; top: 425px; float: right;left: 65%; background-color: rgba(47, 85, 151, .2);">
-     <table style="border-spacing: 10px; border-collapse: separate; width: 550px; color: white;">
-       <tr> <td colspan="3" style="font-size:10px;"> Please choose Region or Coverage Name or (Latitude and Longitude) to navigate on globe.</td> </tr>
-       <tr> <td style="width: 30%;">1. Region Search: </td> <td colspan="2"> <input type="text" id="txtRegionGoTo" class="autocompleteRegionGoTo" style="width:81%; color:blue; font-size:12px;"/> <button id="btnRegionGoTo" type="button" class="btn btn-success" style="height: 20px; font-size: 10px;">Goto</button> </td> </tr>
-
-       <tr> <td>2. Coverage Name: </td> <td colspan="2"> <input type="text" id="txtCoverageIDGoTo" class="autocompleteCoverageIDGoTo" style="width:81%; color:blue; font-size:12px;"/> <button id="btnCoverageIDGoTo" type="button" class="btn btn-warning" style="height: 20px; font-size: 10px;">Goto</button> </td> </tr>
-
-       <tr> <td>3. Latitude: </td> <td colspan="2"> <input type="text" id="txtLatitudeGoTo" style="width:25%; color:blue; font-size:12px;"/>
-            &nbsp; Longitude: &nbsp;
-                <input type="text" id="txtLongitudeGoTo" style="width:28%; color:blue; font-size:12px;"/>
-            <button id="btnLatLonGoTo" type="button" class="btn btn-danger" style="height: 20px; font-size: 10px;">Goto</button>
-            </td> </tr>
-       <tr> <td colspan="3"> <a href="#" id="linkGoTo" style="color:yellow; font-size:9px;"></a></tr>
-     </table>
-   </div> -->
-
 
     <script type="application/javascript">
         $(function() {
