Add load spectral library to main chart Dock (it cannot zoom and has gap as the previous 1 line chart)

--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
     <script src="html/libs/amcharts/amcharts.js"></script>
     <script src="html/libs/amcharts/serial.js"></script>
     <script src="html/libs/amcharts/light.js"></script>
+    <script src="//www.amcharts.com/lib/3/xy.js"></script>
     <script src="html/libs/amcharts/plugins/export/libs/jszip/jszip.js"></script>
     <script src="html/libs/amcharts/plugins/export/libs/xlsx/xlsx.js"></script>
     <script src="html/libs/amcharts/export.js"></script>
