--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
     <link rel="stylesheet" href="html/modules/menu-context/menu-context.css" />
     <link rel="stylesheet" href="html/modules/charts/line-chart.css" />
 
-
     <!-- Javascript libraries online -->
     <script src="html/js/jquery/jquery-2.2.3.min.js"></script>
     <script src="html/js/jquery/jquery-ui.min.js"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.min.js"></script>
 
     <!-- Javascript amcharts -->
     <script src="html/libs/amcharts/amcharts.js"></script>
@@ -45,8 +45,6 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
 
     <!-- Javascript 3rd - libraries local -->
-    <!--D3 library for chart implementation-->
-    <script src="html/libs/d3charts/d3.v3.min.js"></script>
     <script src="html/libs/malihu-custom-scrollbar-plugin/jquery.mousewheel.js"></script>
     <script src="html/libs/malihu-custom-scrollbar-plugin/jquery.mCustomScrollbar.js"></script>
     <script src="html/libs/codemirror/codemirror.js"></script>
@@ -93,6 +91,13 @@
 <body>
     <nav id="service-navbar"></nav>
     <div id="service-container">
+	<!-- loading image -->
+	<div id="loading" style="margin: 0px; padding: 0px; position: fixed; right: 0px; top: 0px; width: 100%; height: 100%; background-color: rgb(0, 0, 0); z-index: 30001; opacity: 1;">
+		<p style="position: absolute; color: White; top: 35%; left: 25%;">
+		<b style="font-size:30px;">Welcome to PlanetServer 2, please wait...</b>
+		<img src="html/images/loading.gif">
+		</p>
+	</div>
         <canvas id="canvasOne"></canvas>
     </div>
 
@@ -105,6 +110,20 @@
             $("#service-container").service();
         });
     </script>
+
+    <!-- dialog show when first load page about tour -->
+    <div id="dialogTour" class="modal fade" style="position: absolute;  color: white; top: 45%;
+    left: 35%; width: 30%; height: 160px; background: linear-gradient(to right, #2f5597, #203864);
+    font-size: 20px;">
+      <div class="modal-body">
+        This is first time you visit PlanetServer 2. Do you want to have a short tour ?
+      </div>
+      <div class="modal-footer">
+        <button type="button" data-dismiss="modal" class="btn btn-success" id="btnDialogTourOk">Ok</button>
+        <button type="button" data-dismiss="modal" class="btn btn-warning">No</button>
+        <button type="button" data-dismiss="modal" class="btn btn-danger" id="btnDialogTourNever">No & Never</button>
+      </div>
+    </div>
 
 </body>
 
