change clients with difference end points

--- a/html/data/shapefiles/example.html
+++ b/html/data/shapefiles/example.html
@@ -23,7 +23,7 @@
         var name = shapeFileAttributes.values.name + "\n Lat: " + shapeFileAttributes.values.center_lat + "\n Lon: " + shapeFileAttributes.values.center_lon;
         placemarkAttributes = new WorldWind.PlacemarkAttributes(null);
         placemarkAttributes.depthTest = false;
-        placemarkAttributes.imageSource = "http://access.planetserver.eu/html/images/icons/main-chart/5.png";
+        placemarkAttributes.imageSource = "http://mars.planetserver.eu/html/images/icons/main-chart/5.png";
         placemarkAttributes.imageColor = WorldWind.Color.YELLOW;
         placemarkAttributes.labelAttributes.color = new WorldWind.Color(0.38, 0.97, 0.02, 1);
         placemarkAttributes.labelAttributes.depthTest = false;
