--- a/index.html
+++ b/index.html
@@ -91,38 +91,42 @@
 <body>
     <nav id="service-navbar"></nav>
     <div id="service-container">
-	<!-- loading image -->
-	<div id="loading" style="margin: 0px; padding: 0px; position: fixed; right: 0px; top: 0px; width: 100%; height: 100%; background-color: rgb(0, 0, 0); z-index: 30001; opacity: 1;">
-		<p style="position: absolute; color: White; top: 35%; left: 25%;">
-		<b style="font-size:30px;">Welcome to PlanetServer 2, please wait...</b>
-		<img src="html/images/loading.gif">
-		</p>
-	</div>
-        <canvas id="canvasOne"></canvas>
-    </div>
-
-    <!-- menu context on right click -->
-    <ul id="menuContext">
-    </ul>
 
     <script type="application/javascript">
         $(function() {
             $("#service-container").service();
+            if (url.indexOf("moon") > -1) {
+                $("#loadingScreenText").text("Welcome to Moon Client - PlantServer 2, please wait...");
+            }
         });
     </script>
 
-    <!-- dialog show when first load page about tour -->
-    <div id="dialogTour" class="modal fade" style="position: absolute;  color: white; top: 45%;
-    left: 35%; width: 30%; height: 160px; background: linear-gradient(to right, #2f5597, #203864);
-    font-size: 20px;">
-      <div class="modal-body">
-        This is first time you visit PlanetServer 2. Do you want to have a short tour ?
-      </div>
-      <div class="modal-footer">
-        <button type="button" data-dismiss="modal" class="btn btn-success" id="btnDialogTourOk">Ok</button>
-        <button type="button" data-dismiss="modal" class="btn btn-warning">No</button>
-        <button type="button" data-dismiss="modal" class="btn btn-danger" id="btnDialogTourNever">No & Never</button>
-      </div>
+    	<!-- loading image -->
+    	<div id="loading" style="margin: 0px; padding: 0px; position: fixed; right: 0px; top: 0px; width: 100%; height: 100%; background-color: rgb(0, 0, 0); z-index: 30001; opacity: 1;">
+    		<p style="position: absolute; color: White; top: 35%; left: 25%;">
+    		<b style="font-size:30px;" id="loadingScreenText">Welcome to Mars Client - PlanetServer 2, please wait...</b>
+    		<img src="html/images/loading.gif">
+    		</p>
+    	</div>
+            <canvas id="canvasOne"></canvas>
+        </div>
+
+        <!-- menu context on right click -->
+        <ul id="menuContext">
+        </ul>    
+
+        <!-- dialog show when first load page about tour -->
+        <div id="dialogTour" class="modal fade" style="position: absolute;  color: white; top: 45%;
+        left: 35%; width: 30%; height: 160px; background: linear-gradient(to right, #2f5597, #203864);
+        font-size: 20px;">
+          <div class="modal-body">
+            This is first time you visit PlanetServer 2. Do you want to have a short tour ?
+          </div>
+          <div class="modal-footer">
+            <button type="button" data-dismiss="modal" class="btn btn-success" id="btnDialogTourOk">Ok</button>
+            <button type="button" data-dismiss="modal" class="btn btn-warning">No</button>
+            <button type="button" data-dismiss="modal" class="btn btn-danger" id="btnDialogTourNever">No & Never</button>
+          </div>
     </div>
 
 </body>
