change to toggle button for landing sites, gazetteer layer

--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <!-- auto complete dropdown -->
     <link rel="stylesheet" href="//code.jquery.com/ui/1.11.4/themes/smoothness/jquery-ui.css">
 
+    <link rel="stylesheet" href="html/libs/bootstrap-switch/css/bootstrap3/bootstrap-switch.css">
+
     <!-- amchart -->
     <link href="https://www.amcharts.com/lib/3/plugins/export/export.css" rel="stylesheet" type="text/css">
 
@@ -43,6 +45,8 @@
 
     <!-- Javascript bootstrap library -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
+
+    <script src="html/libs/bootstrap-switch/js/bootstrap-switch.js"></script>
 
     <!-- Javascript 3rd - libraries local -->
     <script src="html/libs/malihu-custom-scrollbar-plugin/jquery.mousewheel.js"></script>
