--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
         $(function() {
             $("#service-container").service();
             if (url.indexOf("moon") > -1) {
-                $("#loadingScreenText").text("Welcome to Moon Client - PlantServer 2, please wait...");
+                $("#loadingScreenText").text("Welcome to PlanetServer@Moon, please wait...");
             }
         });
     </script>
@@ -108,7 +108,7 @@
     	<!-- loading image -->
     	<div id="loading" style="margin: 0px; padding: 0px; position: fixed; right: 0px; top: 0px; width: 100%; height: 100%; background-color: rgb(0, 0, 0); z-index: 30001; opacity: 1;">
     		<p style="position: absolute; color: White; top: 35%; left: 25%;">
-    		<b style="font-size:30px;" id="loadingScreenText">Welcome to Mars Client - PlanetServer 2, please wait...</b>
+    		<b style="font-size:30px;" id="loadingScreenText">Welcome to PlanetServer@Mars, please wait...</b>
     		<img src="html/images/loading.gif">
     		</p>
     	</div>
@@ -117,14 +117,14 @@
 
         <!-- menu context on right click -->
         <ul id="menuContext">
-        </ul>    
+        </ul>
 
         <!-- dialog show when first load page about tour -->
         <div id="dialogTour" class="modal fade" style="position: absolute;  color: white; top: 45%;
         left: 35%; width: 30%; height: 160px; background: linear-gradient(to right, #2f5597, #203864);
         font-size: 20px;">
           <div class="modal-body">
-            This is first time you visit PlanetServer 2. Do you want to have a short tour ?
+            This is first time you visit PlanetServer. Do you want to have a short tour ?
           </div>
           <div class="modal-footer">
             <button type="button" data-dismiss="modal" class="btn btn-success" id="btnDialogTourOk">Ok</button>
