--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
     <script src="html/template/docks/gis-toolbar.js"></script>
     <script src="html/template/docks/coordinate-overlay.js"></script>
     <script src="html/template/docks/ratio-dock.js"></script>
+    <script src="html/template/docks/histogram-dock.js"></script>
     <!-- Javascript panels (modules) -->
     <script src="html/template/panels/dock-panel.js"></script>
     <script src="html/template/panels/tab-panel.js"></script>
